--- a/public/index.html
+++ b/public/index.html
@@ -5,57 +5,47 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--jq-->
-        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-        <!--bs-->
-        <link href="lib/bs/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <script src="lib/bs/js/bootstrap.min.js" type="text/javascript"></script>
 
-        <!--<link href="style.css" rel="stylesheet" type="text/css"/>-->
-    </head>
-    <body>
-        <div>TODO write    ontent</div>
-        <script>
+<head>
+  <title>TODO supply a title</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--jq-->
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <!--bs-->
+  <link href="lib/bs/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <script src="lib/bs/js/bootstrap.min.js" type="text/javascript"></script>
 
-            var youtubeList = [
-                'Edn9EVN8gn0',
-                'JUxXiZ4pw8I',
-                'ZEsowsiw28o',
-                '7YKU4H-Ah1A',
-                'v0tlSvIknm4',
-                'kZgfp5zMPm8',
-                'S5OtB4vAOss',
-                'In4GEnDOGbA',
-                'L7jEjr9o5Pg',
-                'bzxHt20lcjM',
-                'byKMYxWfmMM',
-                '62nOysD794M',
-                't6TuwRqwf8M',
-                'QHG6EWAsBbU',
-                '_IvA7V8kaLY',
-                '10xcw0TSShY',
-                'iaHr444rzf4'
-            ];
-            // Returns a random number between min (inclusive) and max (exclusive)
-            function getRandomArbitrary(min, max) {
-                return Math.random() * (max - min) + min;
-            }
-            var randShuffle = Math.round(getRandomArbitrary(100, 999), 0);
-            var randPos = Math.round(getRandomArbitrary(0, youtubeList.length - 1));
-            var yout = 'https://www.youtube.com/watch?v=';
-            var playlist = '&list=PLPd1HuzwfwWTQYTxT_tZVW2in9Mnwln9I';
-            var video = yout + youtubeList[randPos] + playlist + '&shuffle=' + randShuffle;
-            console.log(video);
-            location.href = video;
-//
-//            window.open(video);
-//            console.log(randShuffle);
-//            console.log(randPos);
+  <!--<link href="style.css" rel="stylesheet" type="text/css"/>-->
+</head>
 
-        </script>
-    </body>
+<body>
+  <div>TODO write ontent</div>
+  <script>
+var domain = document.domain;
+var ws = new WebSocket('ws://'+domain+':8770');
+
+ws.open =  function (event) {
+  // ws.send('something');
+};
+
+ws.onmessage = function(event) {
+
+  console.log("fff"+ event.data);
+};
+ws.onclose = function(event) {
+  console.log('err');
+  setTimeout(function() {
+    location.reload();
+  }, 100);
+};
+//ws end
+
+
+
+
+
+  </script>
+</body>
+
 </html>
