--- a/public/index.html
+++ b/public/index.html
@@ -14,38 +14,54 @@ and open the template in the editor.
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <!--bs-->
   <link href="lib/bs/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="bower_components/chartist/dist/chartist.min.css">
   <script src="lib/bs/js/bootstrap.min.js" type="text/javascript"></script>
-
+  <script src="bower_components/chartist/dist/chartist.min.js"></script>
   <!--<link href="style.css" rel="stylesheet" type="text/css"/>-->
 </head>
 
 <body>
+
   <div>TODO write ontent</div>
+  <div class="ct-chart ct-perfect-fourth"></div>
+  <!-- <div class="ct-chart ct-golden-section" id="chart2"></div> -->
   <script>
-var domain = document.domain;
-var ws = new WebSocket('ws://'+domain+':8770');
+    var domain = document.domain;
+    var ws = new WebSocket('ws://' + domain + ':8770');
 
-ws.open =  function (event) {
-  // ws.send('something');
-};
+    ws.open = function(event) {
+      // ws.send('something');
+    };
 
-ws.onmessage = function(event) {
+    ws.onmessage = function(event) {
 
-  console.log("fff"+ event.data);
-};
-ws.onclose = function(event) {
-  console.log('err');
-  setTimeout(function() {
-    location.reload();
-  }, 100);
-};
-//ws end
+      console.log("fff" + event.data);
+    };
+    ws.onclose = function(event) {
+      console.log('err');
+      setTimeout(function() {
+        location.reload();
+      }, 100);
+    };
+    //ws end
 
+    var data = {
+      // A labels array that can contain any sort of values
+      labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri'],
+      // Our series array that contains series objects or in this case series data arrays
+      series: [
+        [12, 9, 7, 8, 5],
+        [2, 1, 3.5, 7, 3],
+        [1, 3, 4, 5, 6]
+      ]
+    };
 
-
-
-
+    // Create a new line chart object where as first parameter we pass in a selector
+    // that is resolving to our chart container element. The Second parameter
+    // is the actual data object.
+    new Chartist.Line('.ct-chart', data);
   </script>
+
 </body>
 
 </html>
