--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@ and open the template in the editor.
   <!-- <div class="ct-chart ct-golden-section" id="chart2"></div> -->
   <script>
     var domain = document.domain;
-    var ws = new WebSocket('ws://' + domain + ':8770');
+    var ws = new WebSocket('wss://' + domain + ':8770');
 
     ws.open = function(event) {
       // ws.send('something');
@@ -35,7 +35,13 @@ and open the template in the editor.
 
     ws.onmessage = function(event) {
 
-      console.log("fff" + event.data);
+      console.log(event.data);
+      message = JSON.parse(event.data);
+    //  data.series[0].push(message.series[0]);
+    //  data.series[1].push(message.series[1]);
+    //  data.series[2].push(message.series[2]);
+    //  console.log(data);
+   draw(message)
     };
     ws.onclose = function(event) {
       console.log('err');
@@ -50,16 +56,19 @@ and open the template in the editor.
       labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri'],
       // Our series array that contains series objects or in this case series data arrays
       series: [
-        [12, 9, 7, 8, 5],
-        [2, 1, 3.5, 7, 3],
-        [1, 3, 4, 5, 6]
+        [12, 9, 7, 8, 5,8,9],
+        [2, 1, 3.5, 7, 3,6,4],
+        [1, 3, 4, 5, 6,2,5]
       ]
     };
 
     // Create a new line chart object where as first parameter we pass in a selector
     // that is resolving to our chart container element. The Second parameter
     // is the actual data object.
-    new Chartist.Line('.ct-chart', data);
+    function draw(data){
+      new Chartist.Line('.ct-chart', data);
+    }
+      new Chartist.Line('.ct-chart', data);
   </script>
 
 </body>
