--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,9 @@ and open the template in the editor.
   <!-- <div class="ct-chart ct-golden-section" id="chart2"></div> -->
   <script>
     var domain = document.domain;
-    var ws = new WebSocket('wss://' + domain + ':8770');
-
+    // var ws = new WebSocket('wss://' + domain + ':8770');
+    var host = location.origin.replace(/^http/, 'ws')
+    var ws = new WebSocket(host);
     ws.open = function(event) {
       // ws.send('something');
     };
