--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,12 @@ and open the template in the editor.
       data.series[0].push(message.series[0][0]);
       data.series[1].push(message.series[1][0]);
       data.series[2].push(message.series[2][0]);
+      if (data.labels.length>15){
+        data.labels.splice(0,1);
+        data.series[0].splice(0,1);
+        data.series[1].splice(0,1);
+        data.series[2].splice(0,1);
+      }
        console.log(data);
       draw(data)
     };
@@ -68,6 +74,7 @@ and open the template in the editor.
     // is the actual data object.
     function draw(data) {
       new Chartist.Line('.ct-chart', data);
+    //  Chartist.scale( 5, 16);
     }
     new Chartist.Line('.ct-chart', data);
   </script>
