--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@ and open the template in the editor.
 
       console.log(event.data);
       message = JSON.parse(event.data);
-      data.labels.push("ttt");
+      data.labels.push("|");
       data.series[0].push(message.series[0][0]);
       data.series[1].push(message.series[1][0]);
       data.series[2].push(message.series[2][0]);
@@ -60,12 +60,12 @@ and open the template in the editor.
 
     var data = {
       // A labels array that can contain any sort of values
-      labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri'],
+      labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Fri'],
       // Our series array that contains series objects or in this case series data arrays
       series: [
-        [12, 9, 7, 8, 5, 8, 9],
-        [2, 1, 3.5, 7, 3, 6, 4],
-        [1, 3, 4, 5, 6, 2, 5]
+        [2, 9, 7, 8, 5, 8],
+        [2, 1, 3, 7, 3, 6],
+        [1, 3, 4, 5, 6, 2]
       ]
     };
 
