--- a/public/index.html
+++ b/public/index.html
@@ -17,33 +17,34 @@ and open the template in the editor.
   <link rel="stylesheet" href="bower_components/chartist/dist/chartist.min.css">
   <script src="lib/bs/js/bootstrap.min.js" type="text/javascript"></script>
   <script src="bower_components/chartist/dist/chartist.min.js"></script>
+  <!-- // <script type="text/javascript" src="data/data0.json"></script> -->
   <!--<link href="style.css" rel="stylesheet" type="text/css"/>-->
 </head>
 
 <body>
-<div class="container">
+  <div class="container">
     <div class="ct-chart ct-perfect-fourth"></div>
     <input type="TEXT" id="user" size="40" placeholder="test post">
     <input type="button" id="submit" value="Submit">
-</div>
+  </div>
 
   <!-- <div class="ct-chart ct-golden-section" id="chart2"></div> -->
   <script>
-  $(document).ready(function() {
-    var user, pass;
-    $("#submit").click(function() {
-      user = $("#user").val();
-      pass = $("#password").val();
-      $.post("/", {
-        user: user,
-        password: pass
-      }, function(data) {
-        if (data === 'done') {
-          alert("login success");
-        }
+    $(document).ready(function() {
+      var user, pass;
+      $("#submit").click(function() {
+        user = $("#user").val();
+        pass = $("#password").val();
+        $.post("/", {
+          user: user,
+          password: pass
+        }, function(data) {
+          if (data === 'done') {
+            alert("login success");
+          }
+        });
       });
     });
-  });
     var domain = document.domain;
     // var ws = new WebSocket('ws://' + domain + ':8770/');
     var host = location.origin.replace(/^http/, 'ws')
@@ -53,21 +54,29 @@ and open the template in the editor.
     };
 
     ws.onmessage = function(event) {
+      var data = {
+        labels: [],
+        series: [
+          [],[],[],[],[]
+        ]
+      };
+      // console.log(event.data);
+      message = JSON.parse(event.data);
+      for (var i = 0; i < message.items.length; i++) {
+        // message[i]
+        data.labels.push(message.items[i].ti);
+        data.series[0].push(message.items[i].t1);
+        data.series[1].push(message.items[i].t2);
+        data.series[2].push(message.items[i].t3);
+        data.series[3].push(message.items[i].t4);
+        data.series[4].push(message.items[i].t5);
+      }
 
-      console.log(event.data);
-      // message = JSON.parse(event.data);
-      // data.labels.push("|");
-      // data.series[0].push(message.series[0][0]);
-      // data.series[1].push(message.series[1][0]);
-      // data.series[2].push(message.series[2][0]);
-      // if (data.labels.length>15){
-      //   data.labels.splice(0,1);
-      //   data.series[0].splice(0,1);
-      //   data.series[1].splice(0,1);
-      //   data.series[2].splice(0,1);
       // }
-      //  console.log(data);
-      //     draw(data)
+      console.log(message);
+      console.log(data);
+      console.log(message.items[2].t1);
+      draw(data);
     };
     ws.onclose = function(event) {
       console.log('err');
@@ -77,25 +86,15 @@ and open the template in the editor.
     };
     //ws end
 
-    var data = {
-      // A labels array that can contain any sort of values
-      labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Fri'],
-      // Our series array that contains series objects or in this case series data arrays
-      series: [
-        [2, 9, 7, 8, 5, 8],
-        [2, 1, 3, 7, 3, 6],
-        [1, 3, 4, 5, 6, 2]
-      ]
-    };
 
     // Create a new line chart object where as first parameter we pass in a selector
     // that is resolving to our chart container element. The Second parameter
     // is the actual data object.
     function draw(data) {
       new Chartist.Line('.ct-chart', data);
-    //  Chartist.scale( 5, 16);
+      //  Chartist.scale( 5, 16);
     }
-    new Chartist.Line('.ct-chart', data);
+    // new Chartist.Line('.ct-chart', data);
   </script>
 </body>
 
