working on zoom

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,12 @@ and open the template in the editor.
     <input type="TEXT" id="user" size="40" placeholder="test post">
     <input type="button" id="submit" value="Submit">
   </div>
-
+  <div class="pull-right">
+    <span onclick="requestData()" class="glyphicon glyphicon-refresh btn btn-default btn-lg"></span>
+    <span onclick="zoomChart('in')" class="glyphicon glyphicon-plus btn btn-default btn-lg"></span>
+    <span onclick="zoomChart('out')" class="glyphicon glyphicon-minus btn btn-default btn-lg"></span>
+    <button type="button" class="deb" sname="button">deb</button>
+  </div>
   <!-- <div class="ct-chart ct-golden-section" id="chart2"></div> -->
   <script>
     $(document).ready(function() {
@@ -46,37 +51,77 @@ and open the template in the editor.
       });
     });
     var domain = document.domain;
-    // var ws = new WebSocket('ws://' + domain + ':8770/');
+    // var data = {
+    //   labels: [],
+    //   series: [
+    //     [],
+    //     [],
+    //     [],
+    //     [],
+    //     []
+    //   ]
+    // };
+    // // var data_temp = {
+    // //   labels: [],
+    // //   series: [
+    // //     [],
+    // //     [],
+    // //     [],
+    // //     [],
+    // //     []
+    // //   ]
+    // // };
+    data_ini = {
+      labels: [],
+      series: [
+        [],
+        [],
+        [],
+        [],
+        []
+      ]
+    };
+    $(".deb").click(function() {
+        console.log("data_ini deb ");
+        console.log(data_ini);
+        console.log("data_temp deb ");
+        console.log(data_temp);
+      })
+      // var ws = new WebSocket('ws://' + domain + ':8770/');
     var host = location.origin.replace(/^http/, 'ws')
     var ws = new WebSocket(host);
     ws.open = function(event) {
       // ws.send('something');
     };
 
+    function requestData(type) {
+      ws.send(JSON.stringify({
+        "type": "requestData"
+      }))
+    }
     ws.onmessage = function(event) {
-      var data = {
-        labels: [],
-        series: [
-          [],[],[],[],[]
-        ]
-      };
-      // console.log(event.data);
       message = JSON.parse(event.data);
-      for (var i = 0; i < message.items.length; i++) {
-        // message[i]
-        data.labels.push(message.items[i].ti);
-        data.series[0].push(message.items[i].t1);
-        data.series[1].push(message.items[i].t2);
-        data.series[2].push(message.items[i].t3);
-        data.series[3].push(message.items[i].t4);
-        data.series[4].push(message.items[i].t5);
+      if (message.type == "add") {
+        for (var i = 0; i < message.items.length; i++) {
+          data_ini.labels.unshift(message.items[i].ti);
+          data_ini.series[0].unshift(message.items[i].t1);
+          data_ini.series[1].unshift(message.items[i].t2);
+          data_ini.series[2].unshift(message.items[i].t3);
+          data_ini.series[3].unshift(message.items[i].t4);
+          data_ini.series[4].unshift(message.items[i].t5);
+        }
       }
 
-      // }
-      console.log(message);
-      console.log(data);
-      console.log(message.items[2].t1);
-      draw(data);
+      for (var i = 0; i < message.items.length; i++) {
+        data_ini.labels.push(message.items[i].ti);
+        data_ini.series[0].push(message.items[i].t1);
+        data_ini.series[1].push(message.items[i].t2);
+        data_ini.series[2].push(message.items[i].t3);
+        data_ini.series[3].push(message.items[i].t4);
+        data_ini.series[4].push(message.items[i].t5);
+      }
+      data_temp = data_ini;
+      draw(data_ini);
     };
     ws.onclose = function(event) {
       console.log('err');
@@ -87,11 +132,37 @@ and open the template in the editor.
     //ws end
 
 
-    // Create a new line chart object where as first parameter we pass in a selector
-    // that is resolving to our chart container element. The Second parameter
-    // is the actual data object.
-    function draw(data) {
-      new Chartist.Line('.ct-chart', data);
+    function zoomChart(type) {
+
+      if (type == "in") {
+        for (var i = 0; i < data_temp.series.length; i++) {
+          data_temp.series[i].shift();
+        }
+        data_temp.labels.shift();
+      } else if (type == "out") {
+        var lab_len_ini = data_ini.labels.length;
+        var lab_len = data_temp.labels.length;
+        var pos = lab_len_ini - lab_len;
+        // for (var i = 0; i < data.series.length; i++) {
+        //   data_temp.series.unshift(data.series[pos]);
+        // }
+        //
+        // data_temp.labels.unshift(data.labels[pos]);
+        ws.send(JSON.stringify({
+          "type": "add"
+        }))
+      }
+      console.log(pos + " " + data_temp.labels.length + " " + data_ini.labels.length);
+      console.log("data_temp ");
+      console.log(data_temp);
+      console.log("data_ini ");
+      console.log(data_ini);
+      draw(data_temp);
+    }
+
+    function draw(data_dr) {
+
+      new Chartist.Line('.ct-chart', data_dr);
       //  Chartist.scale( 5, 16);
     }
     // new Chartist.Line('.ct-chart', data);
