style adjustments tdy

--- a/public/index.html
+++ b/public/index.html
@@ -17,156 +17,41 @@ and open the template in the editor.
   <link rel="stylesheet" href="bower_components/chartist/dist/chartist.min.css">
   <script src="lib/bs/js/bootstrap.min.js" type="text/javascript"></script>
   <script src="bower_components/chartist/dist/chartist.min.js"></script>
+
   <!-- // <script type="text/javascript" src="data/data0.json"></script> -->
   <!--<link href="style.css" rel="stylesheet" type="text/css"/>-->
 </head>
 
 <body>
-  <div class="container">
+  <div class="">
     <div class="ct-chart ct-perfect-fourth"></div>
-    <input type="TEXT" id="user" size="40" placeholder="test post">
-    <input type="button" id="submit" value="Submit">
+    <div class="post-test form-group col-xs-5 pull-left">
+      <input type="TEXT" id="user" size="10" placeholder="test post">
+      <input type="button" id="submit" value="Submit">
+    </div>
+    <div class=" form-group   pull-left">
+      <button type="button" class="deb" sname="button">deb</button>
+    </div>
+    <div class="pull-right ">
+      <div class=" form-group  ">
+        <span onclick="requestData()" class="glyphicon glyphicon-refresh btn btn-block btn-default btn-lg hidden"></span>
+        <span onclick="location.reload()" class="glyphicon glyphicon-refresh btn btn-block btn-default btn-lg"></span>
+      </div>
+      <div class="center-block form-group  ">
+        <span onclick="zoomChart('out')" class="glyphicon glyphicon-minus btn btn-default btn-lg"></span>
+        <span onclick="zoomChart('in')" class="glyphicon glyphicon-plus btn btn-default btn-lg"></span>
+      </div>
+      <div class="center-block">
+        <span onclick="zoomChart('left')" class="glyphicon glyphicon-arrow-left btn btn-default btn-lg"></span>
+        <span onclick="zoomChart('right')" class="glyphicon glyphicon-arrow-right btn btn-default btn-lg"></span>
+      </div>
+    </div>
   </div>
-  <div class="pull-right">
-    <span onclick="requestData()" class="glyphicon glyphicon-refresh btn btn-default btn-lg"></span>
-    <span onclick="zoomChart('in')" class="glyphicon glyphicon-plus btn btn-default btn-lg"></span>
-    <span onclick="zoomChart('out')" class="glyphicon glyphicon-minus btn btn-default btn-lg"></span>
-    <button type="button" class="deb" sname="button">deb</button>
-  </div>
-  <!-- <div class="ct-chart ct-golden-section" id="chart2"></div> -->
+
+
   <script>
-    $(document).ready(function() {
-      var user, pass;
-      $("#submit").click(function() {
-        user = $("#user").val();
-        pass = $("#password").val();
-        $.post("/", {
-          user: user,
-          password: pass
-        }, function(data) {
-          if (data === 'done') {
-            alert("login success");
-          }
-        });
-      });
-    });
-    var domain = document.domain;
-    // var data = {
-    //   labels: [],
-    //   series: [
-    //     [],
-    //     [],
-    //     [],
-    //     [],
-    //     []
-    //   ]
-    // };
-    // // var data_temp = {
-    // //   labels: [],
-    // //   series: [
-    // //     [],
-    // //     [],
-    // //     [],
-    // //     [],
-    // //     []
-    // //   ]
-    // // };
-    data_ini = {
-      labels: [],
-      series: [
-        [],
-        [],
-        [],
-        [],
-        []
-      ]
-    };
-    $(".deb").click(function() {
-        console.log("data_ini deb ");
-        console.log(data_ini);
-        console.log("data_temp deb ");
-        console.log(data_temp);
-      })
-      // var ws = new WebSocket('ws://' + domain + ':8770/');
-    var host = location.origin.replace(/^http/, 'ws')
-    var ws = new WebSocket(host);
-    ws.open = function(event) {
-      // ws.send('something');
-    };
-
-    function requestData(type) {
-      ws.send(JSON.stringify({
-        "type": "requestData"
-      }))
-    }
-    ws.onmessage = function(event) {
-      message = JSON.parse(event.data);
-      if (message.type == "add") {
-        for (var i = 0; i < message.items.length; i++) {
-          data_ini.labels.unshift(message.items[i].ti);
-          data_ini.series[0].unshift(message.items[i].t1);
-          data_ini.series[1].unshift(message.items[i].t2);
-          data_ini.series[2].unshift(message.items[i].t3);
-          data_ini.series[3].unshift(message.items[i].t4);
-          data_ini.series[4].unshift(message.items[i].t5);
-        }
-      }
-
-      for (var i = 0; i < message.items.length; i++) {
-        data_ini.labels.push(message.items[i].ti);
-        data_ini.series[0].push(message.items[i].t1);
-        data_ini.series[1].push(message.items[i].t2);
-        data_ini.series[2].push(message.items[i].t3);
-        data_ini.series[3].push(message.items[i].t4);
-        data_ini.series[4].push(message.items[i].t5);
-      }
-      data_temp = data_ini;
-      draw(data_ini);
-    };
-    ws.onclose = function(event) {
-      console.log('err');
-      setTimeout(function() {
-        location.reload();
-      }, 100);
-    };
-    //ws end
-
-
-    function zoomChart(type) {
-
-      if (type == "in") {
-        for (var i = 0; i < data_temp.series.length; i++) {
-          data_temp.series[i].shift();
-        }
-        data_temp.labels.shift();
-      } else if (type == "out") {
-        var lab_len_ini = data_ini.labels.length;
-        var lab_len = data_temp.labels.length;
-        var pos = lab_len_ini - lab_len;
-        // for (var i = 0; i < data.series.length; i++) {
-        //   data_temp.series.unshift(data.series[pos]);
-        // }
-        //
-        // data_temp.labels.unshift(data.labels[pos]);
-        ws.send(JSON.stringify({
-          "type": "add"
-        }))
-      }
-      console.log(pos + " " + data_temp.labels.length + " " + data_ini.labels.length);
-      console.log("data_temp ");
-      console.log(data_temp);
-      console.log("data_ini ");
-      console.log(data_ini);
-      draw(data_temp);
-    }
-
-    function draw(data_dr) {
-
-      new Chartist.Line('.ct-chart', data_dr);
-      //  Chartist.scale( 5, 16);
-    }
-    // new Chartist.Line('.ct-chart', data);
   </script>
+  <script src="client.js"></script>
 </body>
 
 </html>
