tdy, chart style

--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,14 @@ and open the template in the editor.
   <script src="bower_components/chartist/dist/chartist.min.js"></script>
 
   <!-- // <script type="text/javascript" src="data/data0.json"></script> -->
-  <!--<link href="style.css" rel="stylesheet" type="text/css"/>-->
+  <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
   <div class="">
     <div class="ct-chart ct-perfect-fourth"></div>
     <div class="post-test form-group col-xs-5 pull-left">
-      <input type="TEXT" id="user" size="10" placeholder="test post">
+      <input type="TEXT" id="postTest" size="10" placeholder="test post">
       <input type="button" id="submit" value="Submit">
     </div>
     <div class=" form-group   pull-left">
@@ -35,7 +35,7 @@ and open the template in the editor.
     <div class="pull-right ">
       <div class=" form-group  ">
         <span onclick="requestData()" class="glyphicon glyphicon-refresh btn btn-block btn-default btn-lg hidden"></span>
-        <span onclick="location.reload()" class="glyphicon glyphicon-refresh btn btn-block btn-default btn-lg"></span>
+        <span onclick="location.reload()" class="glyphicon glyphicon-refresh btn btn-block btn-default btn-lg hidden"></span>
 
       </div>
       <div class="center-block form-group  ">
