--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@ and open the template in the editor.
     </div>
     <div class="pull-right ">
       <div class=" form-group  ">
-        <span onclick="requestData()" class="glyphicon glyphicon-refresh btn btn-block btn-default btn-lg hidden"></span>
+        <span onclick="requestData()" class="glyphicon glyphicon-refresh btn btn-block btn-default btn-lg "></span>
         <span onclick="location.reload()" class="glyphicon glyphicon-refresh btn btn-block btn-default btn-lg hidden"></span>
 
       </div>
